feat: add monitoring - prometheus, grafana, cadvisor

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ POSTGRES_PORT=5432
 
 # Database Connection String (auto-generated from above values)
 # DATABASE_URL=postgres://postgres:postgres@localhost:5432/signup?sslmode=disable
+
+# Grafana Configuration
+GRAFANA_USER=admin
+GRAFANA_PASSWORD=admin
